added images for email template

--- a/march-update/sales/css/main.css
+++ b/march-update/sales/css/main.css
@@ -254,74 +254,6 @@ main {
   text-align: center; }
 
 /* ==========================================================================
-   WELCOME
-   ========================================================================== */
-.welcome {
-  background-color: #011627;
-  background-size: cover;
-  display: flex;
-  display: -webkit-flex;
-  align-items: center;
-  flex-flow: wrap column;
-  width: 100%; }
-  .welcome .welcome-photos {
-    width: 90%;
-    margin: 5%;
-    display: flex;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: center; }
-    .welcome .welcome-photos figure {
-      margin: .25rem .5rem;
-      position: relative;
-      min-width: 60px;
-      max-width: 480px;
-      max-height: 480px;
-      background: #011627; }
-      .welcome .welcome-photos figure img {
-        width: 100%;
-        border: 5px solid white;
-        position: relative;
-        display: block;
-        min-height: 100%;
-        -webkit-filter: saturate(0.1);
-        filter: saturate(0.1);
-        object-fit: cover; }
-  .welcome .welcome-info {
-    width: 80%; }
-
-figure.aleia-photo img {
-  max-width: none;
-  opacity: 0.9;
-  object-fit: cover; }
-
-.hero-intro {
-  font-size: 2.5rem; }
-
-.welcome h1 {
-  font-family: 'NarzissRegular-Drops';
-  text-transform: uppercase;
-  color: #EFFFE9;
-  font-size: 3rem; }
-
-.welcome-tagline {
-  color: #2EC4B6;
-  font-size: 1.2rem;
-  margin: .5rem 0; }
-
-.welcome-span {
-  color: #2EC4B6; }
-
-.intro-hi {
-  font-weight: 700;
-  font-size: 3.25rem;
-  color: #2EC4B6; }
-
-.intro-name {
-  font-family: "Montserrat Hairline", sans-serif;
-  text-transform: uppercase; }
-
-/* ==========================================================================
    WELCOME - SALES
    ========================================================================== */
 .sales {
@@ -377,6 +309,107 @@ figure.aleia-photo img {
 
 .opt-in img {
   box-shadow: 10px 5px 25px #000000; }
+
+.email-signup {
+  /* Form fields */
+  /* max width 500 */
+  /* max width 400 */
+  /* v6 */ }
+  .email-signup .ck_form.ck_naked {
+    /* divider image */
+    background: transparent;
+    line-height: 1.5em;
+    overflow: hidden;
+    color: #222222;
+    font-size: 16px;
+    border: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    clear: both;
+    margin: 20px 0px;
+    text-align: center; }
+  .email-signup .ck_form.ck_naked p {
+    padding: 0px; }
+  .email-signup .ck_form, .email-signup .ck_form * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+  .email-signup .ck_form.ck_naked .ck_form_fields {
+    width: 100%;
+    float: left;
+    padding: 5%; }
+  .email-signup .ck_errorArea {
+    display: none;
+    /* temporary */ }
+  .email-signup #ck_success_msg {
+    padding: 10px 10px 0px;
+    border: solid 1px #ddd;
+    background: #eee; }
+  .email-signup .ck_form.ck_naked input[type="text"], .email-signup .ck_form.ck_naked input[type="email"] {
+    font-size: 18px;
+    padding: 10px 8px;
+    width: 34%;
+    border: 1px solid #d6d6d6;
+    /* stroke */
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
+    /* border radius */
+    background-color: #fff;
+    /* layer fill content */
+    margin-bottom: 5px;
+    height: auto;
+    float: left;
+    margin: 0px;
+    margin-right: 1%;
+    height: 42px; }
+  .email-signup .ck_form input[type="text"]:focus, .email-signup .ck_form input[type="email"]:focus {
+    outline: none;
+    border-color: #aaa; }
+  .email-signup .ck_form.ck_naked .ck_subscribe_button {
+    width: 100%;
+    color: #fff;
+    margin: 0px;
+    padding: 9px 0px;
+    font-size: 18px;
+    background: #2ec4b6;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
+    /* border radius */
+    cursor: pointer;
+    border: none;
+    text-shadow: none;
+    width: 30%;
+    float: left;
+    height: 42px; }
+  .email-signup .ck_converted_content {
+    display: none;
+    padding: 5%;
+    background: #fff; }
+  .email-signup .ck_form.ck_naked.width500 .ck_subscribe_button {
+    width: 100%;
+    float: none;
+    margin-top: 5px; }
+  .email-signup .ck_form.ck_naked.width500 input[type="text"], .email-signup .ck_form.ck_naked.width500 input[type="email"] {
+    width: 49%; }
+  .email-signup .ck_form.ck_naked.width500 input[type="email"] {
+    margin-right: 0px;
+    width: 50%; }
+  .email-signup .ck_form.ck_naked.width400 .ck_subscribe_button, .email-signup .ck_form.ck_naked.width400 input[type="text"], .email-signup .ck_form.ck_naked.width400 input[type="email"] {
+    width: 100%;
+    float: none;
+    margin-top: 5px; }
+  .email-signup .ck_slide_up, .email-signup .ck_modal, .email-signup .ck_slide_up .ck_naked, .email-signup .ck_modal .ck_naked {
+    min-width: 400px; }
+  .email-signup .page .ck_form.ck_naked {
+    margin: 50px auto;
+    max-width: 700px; }
+  .email-signup .ck_slide_up.ck_form_v6, .email-signup .ck_modal.ck_form_v6, .email-signup .ck_slide_up.ck_form_v6 .ck_naked, .email-signup .ck_modal.ck_form_v6 .ck_naked {
+    min-width: 0 !important; }
+  .email-signup .ck_form_v6 #ck_success_msg {
+    padding: 0px 10px; }
 
 /* ==========================================================================
    OPT-IN AKA MAIN HEADER ACCORDING TO STYLE GUIDE
@@ -455,398 +488,6 @@ footer i:hover {
 /* ==========================================================================
    Main Body
    ========================================================================== */
-.cta {
-  color: #2EC4B6; }
-
-/* ==========================================================================
-   ABOUT PAGE
-   ========================================================================== */
-.homepage .intro-name,
-#about .intro-name,
-#wwm .intro-name,
-#portfolio .intro-name,
-#contact .intro-name {
-  color: #E3E3E3; }
-.homepage .welcome .welcome-photos figure,
-#about .welcome .welcome-photos figure,
-#wwm .welcome .welcome-photos figure,
-#portfolio .welcome .welcome-photos figure,
-#contact .welcome .welcome-photos figure {
-  max-width: 300px; }
-.homepage .welcome .welcome-info,
-#about .welcome .welcome-info,
-#wwm .welcome .welcome-info,
-#portfolio .welcome .welcome-info,
-#contact .welcome .welcome-info {
-  text-align: center; }
-
-.about-copy {
-  display: flex;
-  display: -webkit-flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  flex-wrap: wrap;
-  flex-direction: row; }
-  .about-copy .about-copy-wrapper {
-    width: 80%;
-    margin: 5% 0;
-    color: #011627; }
-    .about-copy .about-copy-wrapper aside {
-      display: flex;
-      display: -webkit-flex;
-      flex-wrap: wrap; }
-      .about-copy .about-copy-wrapper aside .about-aside-copy {
-        flex: 1 300px; }
-      .about-copy .about-copy-wrapper aside .about-aside-photo {
-        background: url(../img/aleia-3.jpg) no-repeat center;
-        background-size: cover;
-        height: 20rem;
-        max-height: 400px;
-        border: #011627 solid 5px;
-        flex: 1 300px; }
-        .about-copy .about-copy-wrapper aside .about-aside-photo img {
-          width: 100%;
-          object-fit: cover; }
-    .about-copy .about-copy-wrapper #mc_embed_signup {
-      margin: 0; }
-    .about-copy .about-copy-wrapper h1 {
-      font-family: 'NarzissRegular-Drops';
-      text-transform: uppercase;
-      font-size: 3.25rem;
-      text-align: left; }
-    .about-copy .about-copy-wrapper p {
-      line-height: 1.4;
-      margin: 0 0 1rem 0; }
-  .about-copy ul {
-    margin-left: 1rem; }
-    .about-copy ul li {
-      list-style: square outside none;
-      display: list-item; }
-
-.about-spacer {
-  background-color: #2EC4B6;
-  height: .25rem;
-  width: 33%;
-  margin-bottom: 1rem; }
-
-.about-p-accent {
-  color: #2EC4B6;
-  font-weight: 700; }
-
-.list-lead-in {
-  margin: 0;
-  line-height: 1; }
-
-.about-list {
-  text-align: left;
-  margin-bottom: 1rem; }
-  .about-list h3 {
-    font-weight: 700;
-    line-height: 2;
-    text-transform: uppercase; }
-  .about-list p {
-    line-height: 1; }
-
-/* ==========================================================================
-   WORK WITH ME
-   ========================================================================== */
-.wwm {
-  display: flex;
-  display: -webkit-flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  flex-wrap: wrap;
-  flex-direction: row; }
-  .wwm .about-spacer {
-    width: 36%; }
-  .wwm .wwm-wrapper {
-    width: 80%;
-    margin: 5% 0; }
-    .wwm .wwm-wrapper h1 {
-      font-family: 'NarzissRegular-Drops';
-      text-transform: uppercase;
-      font-size: 3.25rem;
-      text-align: left; }
-    .wwm .wwm-wrapper p {
-      line-height: 1.4;
-      margin-bottom: 1rem; }
-
-.wwm-subheader {
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 2; }
-
-.wwm-who {
-  margin: 5% 0; }
-  .wwm-who aside {
-    display: flex;
-    display: -webkit-flex;
-    flex-wrap: wrap;
-    align-items: center; }
-    .wwm-who aside .about-aside-copy {
-      flex: 1 400px; }
-    .wwm-who aside .about-aside-photo {
-      background: url(../img/wwm.jpeg) no-repeat center;
-      background-size: cover;
-      height: 20rem;
-      max-height: 400px;
-      border: #011627 solid 5px;
-      flex: 1 300px;
-      margin-left: 2%; }
-      .wwm-who aside .about-aside-photo img {
-        width: 100%;
-        object-fit: cover; }
-
-.question {
-  font-weight: 700; }
-
-.question-line {
-  width: 100%;
-  height: .25rem;
-  background-color: #011627;
-  margin: 2.5% 0; }
-
-.wwm-faq {
-  background-color: #EEEEEE; }
-  .wwm-faq .wwm-faq-wrapper {
-    width: 90%;
-    padding: 5%; }
-
-.packages {
-  display: flex;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  text-align: center; }
-  .packages #card-left {
-    margin-right: 20%; }
-  .packages header {
-    font-weight: 700;
-    color: #2EC4B6;
-    text-transform: uppercase;
-    font-size: 2rem;
-    line-height: 1.5; }
-
-.package-card {
-  flex: 1 400px;
-  width: 45%;
-  max-width: 350px;
-  height: 20%;
-  max-height: 600px;
-  background-color: #EEEEEE; }
-  .package-card .package-card-wrapper {
-    width: 60%;
-    padding: 15% 20%; }
-
-/* ==========================================================================
-   PORTFOLIO
-   ========================================================================== */
-.portfolio {
-  display: flex;
-  display: -webkit-flex;
-  align-items: center;
-  justify-content: center;
-  text-align: left; }
-  .portfolio article {
-    background-color: #EEEEEE;
-    margin: 1rem 0; }
-  .portfolio .portfolio-header {
-    background-color: #011627;
-    color: white;
-    padding: 1rem; }
-  .portfolio .portfolio-item-header {
-    font-size: 1.5rem;
-    margin: 0 0 1rem 0; }
-
-.portfolio-wrapper {
-  width: 80%;
-  margin: 2rem 0; }
-
-.portfolio-content {
-  padding: 1rem;
-  display: none; }
-  .portfolio-content .content-title {
-    font-size: 1.25rem;
-    line-height: 2; }
-
-.content figure {
-  margin: 5% 0;
-  width: 90%; }
-
-.content-description {
-  line-height: 1.25;
-  margin: 0 0 1.5rem 0; }
-
-.portfolio-tags {
-  text-transform: uppercase;
-  color: #2EC4B6; }
-
-/* ==========================================================================
-   CONTACT
-   ========================================================================== */
-.contact {
-  display: flex;
-  display: -webkit-flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  flex-wrap: wrap;
-  flex-direction: row; }
-  .contact .contact-wrapper {
-    width: 80%;
-    margin: 5% 0; }
-  .contact h1 {
-    font-family: 'NarzissRegular-Drops';
-    text-transform: uppercase;
-    font-size: 3.25rem;
-    text-align: left; }
-  .contact form {
-    display: flex;
-    display: -webkit-flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow: wrap row; }
-    .contact form input, .contact form textarea, .contact form select {
-      width: 100%;
-      height: 1.5rem;
-      border-sizing: border-box;
-      margin-bottom: .5rem; }
-    .contact form textarea {
-      height: 3rem;
-      margin-bottom: .5rem; }
-    .contact form input[type="submit"] {
-      background-color: #011627;
-      color: white;
-      text-transform: uppercase;
-      border: none;
-      font-size: 1.5rem;
-      font-weight: 700;
-      width: 100%;
-      padding: .5rem 4rem;
-      width: 100%;
-      height: auto; }
-
-body {
-  text-align: center; }
-
-.thank-you-copy {
-  font-family: 'Montserrat';
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #2EC4B6;
-  font-size: 1.5rem;
-  margin-bottom: 5%; }
-
-.intro-name,
-.welcome-tagline {
-  color: #EFFFE9; }
-
-/* ==========================================================================
-   ConvertKit Email
-   ========================================================================== */
-.email-signup {
-  /* Form fields */
-  /* max width 500 */
-  /* max width 400 */
-  /* v6 */ }
-  .email-signup .ck_form.ck_naked {
-    /* divider image */
-    background: transparent;
-    line-height: 1.5em;
-    overflow: hidden;
-    color: #222222;
-    font-size: 16px;
-    border: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    clear: both;
-    margin: 20px 0;
-    text-align: center; }
-  .email-signup .ck_form.ck_naked p {
-    padding: 0; }
-  .email-signup .ck_form, .email-signup .ck_form * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
-  .email-signup .ck_form.ck_naked .ck_form_fields {
-    width: 100%;
-    float: left;
-    padding: 2.5%; }
-  .email-signup .ck_errorArea {
-    display: none;
-    /* temporary */ }
-  .email-signup #ck_success_msg {
-    padding: 10px 10px 0px;
-    border: solid 1px #ddd;
-    background: #eee; }
-  .email-signup .ck_form.ck_naked input[type="text"], .email-signup .ck_form.ck_naked input[type="email"] {
-    font-size: 18px;
-    padding: 10px 8px;
-    width: 34%;
-    border: 1px solid #d6d6d6;
-    /* stroke */
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
-    border-radius: 0px;
-    /* border radius */
-    background-color: #fff;
-    /* layer fill content */
-    margin-bottom: 5px;
-    height: auto;
-    float: left;
-    margin: 0px;
-    margin-right: 1%;
-    height: 42px; }
-  .email-signup .ck_form input[type="text"]:focus, .email-signup .ck_form input[type="email"]:focus {
-    outline: none;
-    border-color: #aaa; }
-  .email-signup .ck_form.ck_naked .ck_subscribe_button {
-    width: 100%;
-    color: #fff;
-    margin: 0px;
-    padding: 9px 0px;
-    font-size: 1rem;
-    background: #2ec4b6;
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
-    border-radius: 0px;
-    /* border radius */
-    cursor: pointer;
-    border: none;
-    text-shadow: none;
-    width: 30%;
-    float: left;
-    height: 42px; }
-  .email-signup .ck_converted_content {
-    display: none;
-    padding: 5%;
-    background: #fff; }
-  .email-signup .ck_form.ck_naked.width500 .ck_subscribe_button {
-    width: 100%;
-    float: none;
-    margin-top: 5px; }
-  .email-signup .ck_form.ck_naked.width500 input[type="text"], .email-signup .ck_form.ck_naked.width500 input[type="email"] {
-    width: 49%; }
-  .email-signup .ck_form.ck_naked.width500 input[type="email"] {
-    margin-right: 0px;
-    width: 50%; }
-  .email-signup .ck_form.ck_naked.width400 .ck_subscribe_button, .email-signup .ck_form.ck_naked.width400 input[type="text"], .email-signup .ck_form.ck_naked.width400 input[type="email"] {
-    width: 100%;
-    float: none;
-    margin-top: 5px; }
-  .email-signup .ck_slide_up, .email-signup .ck_modal, .email-signup .ck_slide_up .ck_naked, .email-signup .ck_modal .ck_naked {
-    min-width: 400px; }
-  .email-signup .page .ck_form.ck_naked {
-    margin: 50px auto;
-    max-width: 700px; }
-  .email-signup .ck_slide_up.ck_form_v6, .email-signup .ck_modal.ck_form_v6, .email-signup .ck_slide_up.ck_form_v6 .ck_naked, .email-signup .ck_modal.ck_form_v6 .ck_naked {
-    min-width: 0 !important; }
-  .email-signup .ck_form_v6 #ck_success_msg {
-    padding: 0px 10px; }
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -920,44 +561,6 @@ body {
   .logo {
     width: 10%; }
 
-  .welcome {
-    flex-flow: nowrap row;
-    justify-content: space-between; }
-
-  .welcome-photos, .welcome-info {
-    width: 40%;
-    margin: 0 1.25%; }
-
-  .about-copy-wrapper aside .about-aside-photo {
-    margin-left: .5rem; }
-
-  #email-archive .welcome {
-    justify-content: space-around; }
-
-  .sales .welcome {
-    flex-flow: wrap; }
-  .sales .welcome-sales .welcome-sales-wrapper {
-    width: 80%; }
-    .sales .welcome-sales .welcome-sales-wrapper p {
-      font-size: 1.5rem; }
-  .sales .welcome-sales figure {
-    padding: 0 15%; }
-  .sales .welcome-info .opt-in {
-    margin: 0 10%; }
-    .sales .welcome-info .opt-in p {
-      font-size: 1.5rem; }
-  .sales #mc_embed_signup button {
-    padding: 1.25rem 1rem; }
-
-  .welcome-left,
-  .welcome-right {
-    width: 48%; }
-
-  .welcome-right figure {
-    width: 60%; }
-  .welcome-right .opt-in-tagline {
-    margin: 2.5% 0 0 0; }
-
   .sales {
     display: flex;
     display: -webkit-flex;
@@ -986,18 +589,8 @@ body {
   .welcome-right .opt-in-tagline {
     margin: 2.5% 0 0 0; }
 
-  .content figure {
-    margin: 2.5% 0;
-    width: 50%; }
-
-  input[type="submit"] {
-    width: 50%; }
-
-  #thank-you {
-    background-color: #011627; }
-
   footer {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     justify-content: space-around; }
 
   .footer-copy {
@@ -1015,15 +608,17 @@ body {
     width: 40%;
     height: 60%; }
 
-  .welcome-right figure {
-    width: 55%; }
-    .welcome-right figure img {
-      width: 100%; }
-  .welcome-right .opt-in-tagline {
-    margin: 2.5% 0 0 0; }
+  .welcome-right {
+    height: 60%; }
+    .welcome-right figure {
+      width: 55%; }
+      .welcome-right figure img {
+        width: 100%; }
+    .welcome-right .opt-in-tagline {
+      margin: 2.5% 0 0 0; }
 
-  .not-found-main {
-    padding: 2vh 8vh; } }
+  .email-signup .ck_form.ck_naked {
+    margin: 0; } }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */ }
 /* ==========================================================================
