--- a/march-update/sales/css/main.scss
+++ b/march-update/sales/css/main.scss
@@ -314,86 +314,6 @@ main{
 }
 
 /* ==========================================================================
-   WELCOME
-   ========================================================================== */
-.welcome{
-  background-color: $main-color;
-  background-size: cover;
-  display: flex;
-  display: -webkit-flex;
-  align-items: center;
-  flex-flow: wrap column;
-  width: 100%;
-  .welcome-photos{
-    width: 90%;
-    margin: 5%;
-    display: flex;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: center;
-      figure{
-        margin: .25rem .5rem;
-        position: relative;
-        min-width: 60px;
-        max-width: 480px;
-        max-height: 480px;
-        background: $main-color;
-        img{
-          width: 100%;
-          border: 5px solid white;
-          position: relative;
-          display: block;
-          min-height: 100%;
-          -webkit-filter: saturate(.1);
-          filter: saturate(.1);
-          object-fit: cover;
-        }
-      }
-  }
-  .welcome-info{
-    width: 80%;
-  }
-}
-
-figure.aleia-photo img {
-  max-width: none;
-  opacity: 0.9;
-  object-fit: cover;
-}
-
-.hero-intro{
-  font-size: 2.5rem;
-}
-
-.welcome h1{
-  @include font-display;
-  color: $accent-color;
-  font-size: 3rem;
-}
-
-.welcome-tagline{
-  color: $secondary-color;    
-  font-size: 1.2rem;
-  margin: .5rem 0;
-}
-
-.welcome-span{
-  color: $secondary-color;
-}
-
-.intro-hi{
-    font-weight: 700;
-    font-size: 3.25rem;
-    color: $secondary-color;
-}
-
-.intro-name{
-  font-family: $font-sans-hairline;
-  text-transform: uppercase;
-}
-
-
-/* ==========================================================================
    WELCOME - SALES
    ========================================================================== */
 .sales{
@@ -460,443 +380,7 @@ figure.aleia-photo img {
   box-shadow: 10px 5px 25px #000000;
 }
 
-/* ==========================================================================
-   OPT-IN AKA MAIN HEADER ACCORDING TO STYLE GUIDE
-   ========================================================================== */
-
-#mc_embed_signup{
-  font-family: $font-body;
-  text-align: center;
-  width: 100%;
-  display: flex;
-  display: -webkit-flex;
-  justify-content: center;
-  align-items: center;
-  margin: 5% 0;
-  button{
-    background-color: $accent-color;
-    font-size: 1.5rem;
-    padding: .5rem 2rem;
-    a{
-      color: $main-color;
-    }
-  }
-}
-
-.opt-in-divider{
-  height: .5rem;
-  margin: 5% 0 0 0;
-  width: 100%;
-  background-color: $accent-color;
-}
-
-.opt-in-tagline{
-  color: $secondary-color;
-  font-size: 1.25rem;
-  margin: 2.5% 0;
-  padding: 2.5%;
-  p{
-    margin: 2.5% 0;
-  }
-}
-
-/* ==========================================================================
-   Footer
-   ========================================================================== */
-footer{
-  background-color: $accent-color;
-  color: $standard-grey;
-  font-family: $font-body;
-  height: 10vh;
-  width: 100%;
-  display: flex;
-  display: -webkit-flex;
-  font-size: .9rem;
-}
-.footer-copy{
-  display: flex;
-  display: -webkit-flex;
-  align-items: center;
-  flex-flow: wrap row;
-  width: 100%;
-  justify-content: space-around;
-}
-.footer-tag{
-  display: flex;
-  display: -webkit-flex;
-  width: 80%;
-  align-items: center;
-  justify-content: space-around;
-}
-.social{
-  display: flex;
-  display: -webkit-flex;
-  width: 75%;
-  align-items: center;
-  justify-content: space-between;
-}
-
-footer i{
-  color: $standard-grey;
-}
-footer i:hover{
-  color: $secondary-color;
-}
-
-
-/* ==========================================================================
-   Main Body
-   ========================================================================== */
-.cta{
-  color: $secondary-color;
-}
-/* ==========================================================================
-   ABOUT PAGE
-   ========================================================================== */
-.homepage,
-#about, 
-#wwm, 
-#portfolio, 
-#contact{
-  .intro-name{
-    color: $standard-grey;
-  }
-  .welcome{
-    .welcome-photos{
-      figure{
-        max-width: 300px;
-      }
-    }
-    .welcome-info{
-      text-align: center;
-    }
-  }
-}
-
-.about-copy{
-  display: flex;
-  display: -webkit-flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  flex-wrap: wrap;
-  flex-direction: row;
-  .about-copy-wrapper{
-    width: 80%;
-    margin: 5% 0;
-    color: $main-color;
-    aside{
-      display: flex;
-      display: -webkit-flex;
-      flex-wrap: wrap;
-      .about-aside-copy{
-        flex: 1 300px;
-      }
-      .about-aside-photo{
-        background: url(../img/aleia-3.jpg) no-repeat center;
-        background-size: cover;
-        height: 20rem;
-        max-height: 400px;
-        border: $main-color solid 5px;
-        flex: 1 300px;
-        img{
-          width: 100%;
-          object-fit: cover;
-        }
-      }
-    }
-      #mc_embed_signup{
-        margin: 0;
-    }
-    h1{
-      @include font-display;
-      font-size: 3.25rem;
-      text-align: left;
-    }
-    p{
-      line-height: 1.4;
-      margin: 0 0 1rem 0;
-    }
-  }
-  ul{
-    margin-left: 1rem;
-    li{
-      list-style: square outside none;
-      display: list-item;
-    }
-  }
-}
-
-.about-spacer{
-  background-color: $secondary-color;
-  height: .25rem;
-  width: 33%;
-  margin-bottom: 1rem;
-}
-
-.about-p-accent{
-  color: $secondary-color;
-  font-weight: 700;
-}
-
-.list-lead-in{
-  margin: 0;
-  line-height: 1;
-}
-
-.about-list{
-  text-align: left;
-  margin-bottom: 1rem;
-  h3{
-    font-weight: 700;
-    line-height: 2;
-    text-transform: uppercase;
-  }
-  p{
-    line-height: 1;
-  }
-}
-
-/* ==========================================================================
-   WORK WITH ME
-   ========================================================================== */
-.wwm{
-  display: flex;
-  display: -webkit-flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  flex-wrap: wrap;
-  flex-direction: row;
-    .about-spacer{
-      width: 36%;
-    }
-    .wwm-wrapper{
-      width: 80%;
-      margin: 5% 0;
-        h1{
-          @include font-display;
-          font-size: 3.25rem;
-          text-align: left;
-        }
-        p{
-          line-height: 1.4;
-          margin-bottom: 1rem; 
-        }
-    }
-}
-
-.wwm-subheader{
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 2;
-}
-
-
-.wwm-who{
-  margin: 5% 0;
-  aside{
-    display: flex;
-    display: -webkit-flex;
-    flex-wrap: wrap;
-    align-items: center;
-      .about-aside-copy{
-        flex: 1 400px;
-      }
-      .about-aside-photo{
-        background: url(../img/wwm.jpeg) no-repeat center;
-        background-size: cover;
-        height: 20rem;
-        max-height: 400px;
-        border: $main-color solid 5px;
-        flex: 1 300px;
-        margin-left: 2%;
-          img{
-            width: 100%;
-            object-fit: cover;
-          }
-        }
-    }
-}
-
-.question{
-  font-weight: 700;
-}
-
-.question-line{
-  width: 100%;
-  height: .25rem;
-  background-color: $main-color;
-  margin: 2.5% 0;
-}
-
-.wwm-faq{
-  background-color: $accent-grey;
-  .wwm-faq-wrapper{
-    width: 90%;
-    padding: 5%;
-  }
-}
-
-.packages{
-  display: flex;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  text-align: center;
-    #card-left{
-      margin-right: 20%;
-    }
-    header{
-      font-weight: 700;
-      color: $secondary-color;
-      text-transform: uppercase;
-      font-size: 2rem;
-      line-height: 1.5;
-    }
-}
-
-.package-card{
-  flex: 1 400px;
-  width: 45%;
-  max-width: 350px;
-  height: 20%;
-  max-height: 600px;
-  background-color: $accent-grey;
-
-  .package-card-wrapper{
-    width: 60%;
-    padding: 15% 20%;
-  }
-
-}
-
-/* ==========================================================================
-   PORTFOLIO
-   ========================================================================== */
-.portfolio{
-  display: flex;
-  display: -webkit-flex;
-  align-items: center;
-  justify-content: center;
-  text-align: left;
-    article{
-      background-color: $accent-grey;
-      margin: 1rem 0;
-    }
-    .portfolio-header{
-      background-color: $main-color;
-      color: white;   
-      padding: 1rem;
-    }
-    .portfolio-item-header{
-      font-size: 1.5rem;
-      margin: 0 0 1rem 0;
-    }
-}
-
-.portfolio-wrapper{
-  width: 80%;
-  margin: 2rem 0;
-}
-
-.portfolio-content{
-  padding: 1rem;
-  display: none;
-    .content-title{
-      font-size: 1.25rem;
-      line-height: 2;
-    }
-}
-.content figure{
-  margin: 5% 0;
-  width: 90%;
-}
-.content-description{
-  line-height: 1.25;
-  margin: 0 0 1.5rem 0;
-}
-
-.portfolio-tags{
-  text-transform: uppercase;
-  color: $secondary-color;
-}
-/* ==========================================================================
-   CONTACT
-   ========================================================================== */
-   .contact{
-      display: flex;
-      display: -webkit-flex;
-      justify-content: space-around;
-      align-items: center;
-      width: 100%;
-      flex-wrap: wrap;
-      flex-direction: row;
-      .contact-wrapper{
-        width: 80%;
-        margin: 5% 0;
-      }
-  h1{
-      @include font-display;
-      font-size: 3.25rem;
-      text-align: left;
-    }
-
-    form{
-      display: flex;
-      display: -webkit-flex;
-      justify-content: space-around;
-      align-items: center;
-      flex-flow: wrap row;
-        input, textarea, select{
-          width: 100%;
-          height: 1.5rem;
-          border-sizing: border-box; 
-          margin-bottom: .5rem;
-        }
-        textarea{
-          height: 3rem;
-          margin-bottom: .5rem;
-        }
-        input[type="submit"]{
-          background-color: $main-color;
-          color: white;
-          text-transform: uppercase;
-          border: none;
-          font-size: 1.5rem;
-          font-weight: 700;
-          width: 100%;
-          padding: .5rem 4rem;
-          width: 100%;
-          height: auto;
-        }
-    }
-  }
-
-
-  //THANK YOU
-  body{
-    text-align: center;
-  }
-
-  .thank-you-copy{
-    @include font-header;
-    text-transform: uppercase;
-    color: $secondary-color;
-    font-size: 1.5rem;
-    margin-bottom: 5%;
-  }
-
-  .intro-name,
-  .welcome-tagline{
-    color: $accent-color;
-  }
-
-/* ==========================================================================
-   ConvertKit Email
-   ========================================================================== */
-
-  .email-signup{
+.email-signup{
   
   .ck_form.ck_naked {
   /* divider image */
@@ -910,12 +394,12 @@ footer i:hover{
   -moz-box-shadow: none;
   box-shadow: none;
   clear: both;
-  margin: 20px 0;
+  margin: 20px 0px;
   text-align: center;
 }
 
 .ck_form.ck_naked p {
-  padding: 0;
+  padding: 0px;
 }
 
 .ck_form, .ck_form * {
@@ -927,7 +411,7 @@ footer i:hover{
 .ck_form.ck_naked .ck_form_fields {
   width: 100%;
   float: left;
-  padding: 2.5%;
+  padding: 5%;
 }
 /* Form fields */
 
@@ -968,7 +452,7 @@ footer i:hover{
     color: #fff;
     margin: 0px;
     padding:  9px 0px;
-    font-size: 1rem;
+    font-size: 18px;
     background: #2ec4b6;
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
@@ -1034,6 +518,95 @@ footer i:hover{
 }
 
 }
+
+/* ==========================================================================
+   OPT-IN AKA MAIN HEADER ACCORDING TO STYLE GUIDE
+   ========================================================================== */
+
+#mc_embed_signup{
+  font-family: $font-body;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5% 0;
+  button{
+    background-color: $accent-color;
+    font-size: 1.5rem;
+    padding: .5rem 2rem;
+    a{
+      color: $main-color;
+    }
+  }
+}
+
+.opt-in-divider{
+  height: .5rem;
+  margin: 5% 0 0 0;
+  width: 100%;
+  background-color: $accent-color;
+}
+
+.opt-in-tagline{
+  color: $secondary-color;
+  font-size: 1.25rem;
+  margin: 2.5% 0;
+  padding: 2.5%;
+  p{
+    margin: 2.5% 0;
+  }
+}
+/* ==========================================================================
+   Footer
+   ========================================================================== */
+footer{
+  background-color: $accent-color;
+  color: $standard-grey;
+  font-family: $font-body;
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  display: -webkit-flex;
+  font-size: .9rem;
+}
+.footer-copy{
+  display: flex;
+  display: -webkit-flex;
+  align-items: center;
+  flex-flow: wrap row;
+  width: 100%;
+  justify-content: space-around;
+}
+.footer-tag{
+  display: flex;
+  display: -webkit-flex;
+  width: 80%;
+  align-items: center;
+  justify-content: space-around;
+}
+.social{
+  display: flex;
+  display: -webkit-flex;
+  width: 75%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer i{
+  color: $standard-grey;
+}
+footer i:hover{
+  color: $secondary-color;
+}
+
+/* ==========================================================================
+   Main Body
+   ========================================================================== */
+
+
+
 
 /* ==========================================================================
    Helper classes
@@ -1123,82 +696,7 @@ footer i:hover{
   width: 10%;
 }
 
-//WELCOME
-
-.welcome{
-  flex-flow: nowrap row;
-  justify-content: space-between;
-}
-
-.welcome-photos, .welcome-info{
-  width: 40%;
-  margin: 0 1.25%;
-}
-
-
-
-// ABOUT PAGES
-  .about-copy-wrapper{
-    aside{
-      .about-aside-photo{
-        margin-left: .5rem;
-      }
-    }
-}
-
-#email-archive{
-  .welcome{
-      justify-content: space-around;
-  }
-}
-
-//SALES
-
-.sales{
-  .welcome{
-    flex-flow: wrap;
-  }
- .welcome-sales{
-    .welcome-sales-wrapper{
-      width: 80%;
-      p{
-      font-size: 1.5rem;
-    }
-    }
-   figure{
-      padding: 0 15%;
-    }
-}
-   .welcome-info{
-      .opt-in{
-        margin: 0 10%;
-        p{
-        font-size: 1.5rem;
-      }
-    }
-   }
-   #mc_embed_signup button{
-    padding: 1.25rem 1rem;
-   }
-}
-
-.welcome-left,
-.welcome-right{
-  width: 48%;
-  // height: auto;
-}
-
-.welcome-right{
-  figure{
-    width: 60%;
-  }
-  .opt-in-tagline{
-    margin: 2.5% 0 0 0;
-  }
-}
-
 //WELCOME - SALES
-
 .sales{
     display: flex;
     display: -webkit-flex;
@@ -1237,28 +735,10 @@ footer i:hover{
   }
 }
 
-
-// PORTFOLIO
-.content figure{
-  margin: 2.5% 0;
-  width: 50%;
-}
-
-//contact{
-  input[type="submit"]{
-    width: 50%;
-  }
-
-//THANK YOU
-
-#thank-you{
-  background-color: $main-color;
-}
-
 // FOOTER
 
 footer{
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   justify-content: space-around;
 }
 .footer-copy{
@@ -1273,10 +753,9 @@ footer{
   width: 40%;
 }
 
+
 }
 @media only screen and (min-width: 1200px) {
-
-// WELCOME SALES
 
 .welcome-left{
   width: 40%;
@@ -1284,6 +763,7 @@ footer{
 }
 
 .welcome-right{
+  height: 60%;
   figure{
     width: 55%;
     img{
@@ -1294,26 +774,13 @@ footer{
     margin: 2.5% 0 0 0;
   }
 }
-// .email-signup{
-//   .ck_form.ck_naked{
-//   margin: 0;
-// }
-
-// SALES
-// .sales{
-//   .welcome-sales{
-//     flex-flow: row wrap;
-//   }
-// }
-
-//404
-.not-found-main{
-  padding: 2vh 8vh;
+.email-signup{
+  .ck_form.ck_naked{
+  margin: 0;
+}
 }
 
 }
-
-
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 1.25dppx),
