--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -456,7 +456,8 @@ footer i:hover {
    Main Body
    ========================================================================== */
 .cta {
-  color: #2EC4B6; }
+  color: #2EC4B6;
+  font-size: 1.25rem; }
 
 /* ==========================================================================
    ABOUT PAGE
@@ -809,7 +810,7 @@ body {
     margin: 0px;
     padding: 9px 0px;
     font-size: 1rem;
-    background: #2ec4b6;
+    background: #E71D36;
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
     border-radius: 0px;
